--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -6,7 +6,17 @@
    "id": "ebddb660-c374-4651-83a7-938adb13b743",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "jjjjjjjjjjjjjjjjjjjjjjj"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b2859a2",
+   "metadata": {},
+   "source": [
+    "ddddddddddddddd"
+   ]
   }
  ],
  "metadata": {
