--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -1,21 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebddb660-c374-4651-83a7-938adb13b743",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jjjjjjjjjjjjjjjjjjjjjjj"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "9b2859a2",
    "metadata": {},
    "source": [
-    "ddddddddddddddd"
+    "## Assignment 1 - Machine Learning Project\n",
+    "### Project 1: Classify Images of Colon Cancer\n",
+    "##### Group No. 3: Sheikh Abdul Munim (s4076159), Liya Benoy (s4027344)"
    ]
   }
  ],
