--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -9,11 +9,134 @@
     "### Project 1: Classify Images of Colon Cancer\n",
     "##### Group No. 3: Sheikh Abdul Munim (s4076159), Liya Benoy (s4027344)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2802cc95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importing required libraries\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63f6d709",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InstanceID</th>\n",
+       "      <th>patientID</th>\n",
+       "      <th>ImageName</th>\n",
+       "      <th>cellTypeName</th>\n",
+       "      <th>cellType</th>\n",
+       "      <th>isCancerous</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22405</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22405.png</td>\n",
+       "      <td>fibroblast</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22406</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22406.png</td>\n",
+       "      <td>fibroblast</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22407</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22407.png</td>\n",
+       "      <td>fibroblast</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22408</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22408.png</td>\n",
+       "      <td>fibroblast</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22409</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22409.png</td>\n",
+       "      <td>fibroblast</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   InstanceID  patientID  ImageName cellTypeName  cellType  isCancerous\n",
+       "0       22405          1  22405.png   fibroblast         0            0\n",
+       "1       22406          1  22406.png   fibroblast         0            0\n",
+       "2       22407          1  22407.png   fibroblast         0            0\n",
+       "3       22408          1  22408.png   fibroblast         0            0\n",
+       "4       22409          1  22409.png   fibroblast         0            0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_data = pd.read_csv(\"Image_classification_data\\data_labels_mainData.csv\")\n",
+    "main_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0918d257",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
