--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0918d257",
    "metadata": {},
    "outputs": [],
@@ -176,6 +176,7 @@
     "        is_cancerous, cell_type = self.get_labels(idx)\n",
     "        return image, is_cancerous, cell_type\n",
     "\n",
+    "    #put this in a separate step\n",
     "    def get_data_split(self, label_type=\"isCancerous\"):\n",
     "        \"\"\"\n",
     "        Get data suitable for training/testing\n",
