--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -193,6 +193,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2bbc75ac",
+   "metadata": {},
+   "source": [
+    "### Exploratory Data Analysis (EDA)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "id": "545607a0",
