--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "545607a0",
    "metadata": {},
    "outputs": [
@@ -215,21 +215,18 @@
     }
    ],
    "source": [
-    "# Initialize server\n",
-    "server = ColonCancerPatchServer(\n",
-    "    main_data_path=\"Image_classification_data\\data_labels_mainData.csv\",\n",
-    "    extra_data_path=\"Image_classification_data\\data_labels_extraData.csv\",\n",
-    "    image_folder=\"Image_classification_data\\patch_images\"\n",
-    ")\n",
-    "\n",
-    "# Get a single sample\n",
+    "#initializing the server\n",
+    "server = ColonCancerPatchServer(main_data_path=\"Image_classification_data\\data_labels_mainData.csv\", \n",
+    "                                extra_data_path=\"Image_classification_data\\data_labels_extraData.csv\",\n",
+    "                                image_folder=\"Image_classification_data\\patch_images\")\n",
+    "#fetching a single sample\n",
     "img, cancer_label, cell_type = server.get_sample(0)\n",
     "print(img.shape, cancer_label, cell_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "487909ac",
    "metadata": {},
    "outputs": [
@@ -245,10 +242,9 @@
     }
    ],
    "source": [
-    "# Load sample image from index 0\n",
+    "#loading a sample image from index 0\n",
     "image, is_cancerous, cell_type = server.get_sample(0)\n",
-    "\n",
-    "# Plot the image\n",
+    "#plotting the image\n",
     "plt.imshow(image)\n",
     "plt.title(f\"Cell Type: {cell_type}, Cancerous: {is_cancerous}\")\n",
     "plt.axis(\"off\")\n",
