research txt file (Model Research.txt)

--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -517,6 +517,38 @@
     "plt.ylabel(\"Frequency\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47987583",
+   "metadata": {},
+   "source": [
+    "### Data Pre-processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f474d32a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cda0bcc",
+   "metadata": {},
+   "source": [
+    "### Building Baseline Model: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b59a9cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
