more cleaning up

--- a/old_models.ipynb
+++ b/old_models.ipynb
@@ -19,9 +19,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "import numpy as np\n",
-    "from PIL import Image\n",
-    "import os\n"
+    "import numpy as np"
    ]
   },
   {
