class imbalance identification

--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "2802cc95",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "63f6d709",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "4       22409          1  22409.png   fibroblast         0            0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "5f8937fd",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "4       12685         61  12685.png            0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "5d91e900",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "4  <PIL.Image.Image image mode=RGB size=27x27 at ...  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "555ecfc4",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "(9896, 7)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "d242e939",
    "metadata": {},
    "outputs": [
@@ -442,6 +442,30 @@
    "source": [
     "#data types of columns\n",
     "labels_main.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "90f799cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     cellType  cellTypeName\n",
+      "0           0    fibroblast\n",
+      "11          1  inflammatory\n",
+      "17          3        others\n",
+      "449         2    epithelial\n"
+     ]
+    }
+   ],
+   "source": [
+    "#mapping 'cellType' to 'cellTypeName', ensuring mappings are consistent\n",
+    "unique_mappings = labels_main[['cellType', 'cellTypeName']].drop_duplicates()\n",
+    "print(unique_mappings)"
    ]
   },
   {
@@ -892,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "ed571659",
    "metadata": {},
    "outputs": [
@@ -908,7 +932,7 @@
     }
    ],
    "source": [
-    "#plotting the distribution of the 'cellTypeName' label\n",
+    "#plotting the distribution of the 'cellTypeName' label (consistent with 'cellType')\n",
     "plt.figure(figsize=(8, 4))\n",
     "sns.countplot(data=labels_main, x='cellTypeName', hue='cellTypeName', palette='Set2', legend=False)\n",
     "#adding titles and labels\n",
@@ -1084,7 +1108,7 @@
     "\n",
     "- **Dimensions of Dataset**: `labels_main` contains 9,896 rows and 7 columns, a moderately-sized dataset on colon cell histopathologies that may require memory management when training a model.\n",
     "\n",
-    "- **Revealing Data Types**: \n",
+    "- **Revealing Data Types and Unique Value Counts**: \n",
     "\n",
     "    - Each `InstanceID` appears once so there are 9,896 unique instances of cell histopathologies. --> `int64` data type indicates all values are integers, representing unique instance ID given to each histopathology.\n",
     "    - `patientID` has 60 unique values, with patient 54 appearing 389 times, indicating that multiple colon cell histopathologies were taken from the same patient, and some more than others. --> `int64` indicates all values are integers, representing unique ID given to each patient. \n",
@@ -1092,11 +1116,13 @@
     "\n",
     "    - **Target Variables**\n",
     "    - `cellTypeName` has 4 unique string values indicating a categorical variable = `epithelial`, `inflammatory`, `fibroblast`, `others`; `epithelial` appears twice as much as the next most frequently occuring category, showing that there is a significant class imbalance within this column. --> `object` data type as categories appear as strings (name of colon cell type).\n",
+    "    - `cellType` is the numerical representation of `cellTypeName`, ranging from 0 to 3, the inclusion of this feature is beneficial for model training because `cellTypeName` will not have to be converted to a numerical representation. Mapping `cellType` to `cellTypeName` demonstrates numerical representations are consistent with the text representation, where 0 == fibroblast, 1 == inflammatory, 2 == others, 3 = epithelial. --> `int64` data type.\n",
     "    - `isCancerous` has two unique binary values, 0 (non-cancerous, 5817 instances) and 1 (cancerous, 4079 instances), with more values for non-cancerous colon cells, indicating a class imbalance. --> `int64` data type indicates that presence of cancer is represented by binary classification labels 0 and 1.\n",
     "\n",
     "- **Evaluating Numerical Features**\n",
     "    - `InstanceID` is wide-ranging from 1 to 22444, indicating missing IDs, this indicated that this data is not sequential, just a unique identifier for each colon cell histopathology (most likely not useful for modelling).\n",
     "    - There are multiple samples given per `patientID`, some more than others, indicated by the mean = 29.8 and standard deviation = 17.5, indicating a moderately evenly distribution. Patient-level stratification may be required in model training to avoid data leakage.\n",
+    "    - `cellType`\n",
     "    - Observing a slight class imbalance within the `isCancerous` binary variable has mean = 0.41, indicating that there are are higher number of non-cancerous instances than cancerous instances. This requires certain resampling techniques in data pre-processing to address the class imabalance.\n",
     "\n",
     "- **Image Discrepancy**: all image names given within labels_main exist within the `patch_images` folder, but there exists a significant number of extra images (10,384) within the folder, which may need to be filtered out to avoid any errors as they can not be used in supervised model training. These extra images may be linked to the `lables_extra` data set. \n",
@@ -1140,8 +1166,11 @@
    "source": [
     "### *Class Imbalance Identification*\n",
     "\n",
-    "- \n",
-    "\n"
+    "- **Class Imbalance in `cellTypeName`/`cellType`**: between the 4 classes of colon cell types represented in the histopathologies: fibroblast (0), inflammatory (1), others (2), and epithelial (3), there is significant class imbalance as epithelial appears twice as more as the next most frequently occuring cell type class. Typically this would indicate need for resampling during data pre-processing, but since it is observed to have perfect correlation with `isCancerous` due to huge gaps in data, `cellTypeName` and `cellType` may need to be excluded as a feature in the classification model for `isCancerous` (and vice versa) to avoid data leakage, overfitting, and trivial predictions.\n",
+    "\n",
+    "- **Binary Imbalance in `isCancerous`**: there is nearly 1,800 more samples for non-cancerous (5,817) colon cell histopathologies than cancerous ones (4,079), though is not a significant imbalance, this requires use of resampling techniques or class weighting in data pre-processing. \n",
+    "\n",
+    "- **Distributional Imbalance in `patientID`**: certain patients have contributed more colon cell histopathologies than others, revealing an imbalanced representation of patients, this could lead overfitting as models become biased against more frequently represented patients. "
    ]
   },
   {
