class imbalance more

--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -1170,7 +1170,7 @@
     "\n",
     "- **Binary Imbalance in `isCancerous`**: there is nearly 1,800 more samples for non-cancerous (5,817) colon cell histopathologies than cancerous ones (4,079), though is not a significant imbalance, this requires use of resampling techniques or class weighting in data pre-processing. \n",
     "\n",
-    "- **Distributional Imbalance in `patientID`**: certain patients have contributed more colon cell histopathologies than others, revealing an imbalanced representation of patients, this could lead overfitting as models become biased against more frequently represented patients. "
+    "- **Distributional Imbalance in `patientID`**: certain patients have disproportionately contributed more colon cell histopathology samples than others, revealing an imbalanced representation of patients, this could lead overfitting as models learn patient-specific patterns and not general patterns. Patient-level stratification will be required when splitting the data in data pre-processing to prevent data leakage."
    ]
   },
   {
