data splitting strategy + prevention of data leakage

--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "2802cc95",
    "metadata": {},
    "outputs": [],
@@ -39,10 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "50f4db54",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num GPUs Available: 0\n"
+     ]
+    }
+   ],
    "source": [
     "#checking how many GPUs are available\n",
     "print(\"Num GPUs Available:\", len(tf.config.list_physical_devices('GPU')))"
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "id": "a8a6043a",
    "metadata": {},
    "outputs": [],
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 91,
    "id": "63f6d709",
    "metadata": {},
    "outputs": [
@@ -171,7 +179,7 @@
        "4       22409          1  22409.png   fibroblast         0            0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 92,
    "id": "ee80bfbb",
    "metadata": {},
    "outputs": [
@@ -273,7 +281,7 @@
        "4       12685         61  12685.png            0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 93,
    "id": "cbb3e472",
    "metadata": {},
    "outputs": [
@@ -308,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 94,
    "id": "1274492e",
    "metadata": {},
    "outputs": [
@@ -333,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 95,
    "id": "5d91e900",
    "metadata": {},
    "outputs": [
@@ -438,7 +446,7 @@
        "4  <PIL.Image.Image image mode=RGB size=27x27 at ...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 96,
    "id": "555ecfc4",
    "metadata": {},
    "outputs": [
@@ -484,7 +492,7 @@
        "(9896, 7)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 97,
    "id": "d242e939",
    "metadata": {},
    "outputs": [
@@ -528,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 98,
    "id": "90f799cb",
    "metadata": {},
    "outputs": [
@@ -590,7 +598,7 @@
        "449         2    epithelial"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 99,
    "id": "037f0ec4",
    "metadata": {},
    "outputs": [
@@ -634,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 100,
    "id": "fdd05743",
    "metadata": {},
    "outputs": [
@@ -749,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 101,
    "id": "d42280c8",
    "metadata": {},
    "outputs": [
@@ -853,7 +861,7 @@
        "max    22444.000000    60.000000     3.000000     1.000000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 102,
    "id": "a629b51b",
    "metadata": {},
    "outputs": [
@@ -894,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 103,
    "id": "5a11dc42",
    "metadata": {},
    "outputs": [
@@ -962,7 +970,7 @@
        "others                 1386          0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 104,
    "id": "5e692b00",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 105,
    "id": "e2fe0a74",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 106,
    "id": "4f8c7d78",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 107,
    "id": "ed571659",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 108,
    "id": "2f42ca6e",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 109,
    "id": "e03906d3",
    "metadata": {},
    "outputs": [
@@ -1219,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 110,
    "id": "efa56e1c",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 111,
    "id": "8897674d",
    "metadata": {},
    "outputs": [
@@ -1407,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "f474d32a",
    "metadata": {},
    "outputs": [
@@ -1476,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "4348c3d4",
    "metadata": {},
    "outputs": [
@@ -1519,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 114,
    "id": "cd898e9d",
    "metadata": {},
    "outputs": [
@@ -1549,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 115,
    "id": "ece5ddd0",
    "metadata": {},
    "outputs": [
@@ -1623,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 116,
    "id": "40212e52",
    "metadata": {},
    "outputs": [
@@ -1658,14 +1666,19 @@
    "source": [
     "### *Data Splitting Strategy*\n",
     "\n",
-    "- **Splitting by `patientID`**:\n",
+    "- **Splitting by `patientID`**: Patient-based splitting was implemented as there are multiple images collected per patient in the dataset, and this method ensures that all images per unique patient ID remains in the same training/validation/test data set.\n",
     "\n",
-    "- **Train-Test Split**:"
+    "- **Train-Test Split**: The data set was then split into 80% for training, 10% for validation, and 10% for test. The splits were done separately for Task 1 binary classification model for `isCancerous` and Task 2 multi-class classification model for `cellType`. Splitting was respective to unique patient ID sets.\n",
+    "\n",
+    "- **Stratified Sampling of `patientID`**: to prevent class imbalance across the training, validation, and testing splits, stratified sampling based on `patientID` was used.\n",
+    "    - **Task 1**: stratification was done based on each unique patient's `isCancerous` label, and helped maintain balanced binary class distribution across training, validation, and testing sets.\n",
+    "    - **Task 2**: stratification was done based on each unqiue patient's most frequent `cellType` label among their images, and helped maintain balanced multi-class distribution across training, validation, and testing sets. \n",
+    "    - Patients have all contributed different number of images to the data set, so the exact data split may vary from 80%/10%/10%, because patient-level stratification is prioritized to prevent data leakage."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 129,
    "id": "2536361e",
    "metadata": {},
    "outputs": [
@@ -1673,8 +1686,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unique patients in Task 1: 20280\n",
-      "Unique patients in Task 2: 9896\n"
+      "Unique patients in Task 1: 98\n",
+      "Unique patients in Task 2: 60\n"
      ]
     }
    ],
@@ -1685,8 +1698,8 @@
     "    The strafication is done based on patient IDs, so that all images from a single patient are in the same set.\n",
     "\"\"\"\n",
     "#extracting 'patientID' from the dataset for each task\n",
-    "patient_ids_task1 = [name.split('_')[0] for name in labels_task1['ImageName']]\n",
-    "patient_ids_task2 = [name.split('_')[0] for name in labels_task2['ImageName']]\n",
+    "patient_ids_task1 = labels_task1['patientID']\n",
+    "patient_ids_task2 = labels_task2['patientID']\n",
     "#getting unique patient IDs\n",
     "unique_patients_task1 = np.unique(patient_ids_task1)\n",
     "unique_patients_task2 = np.unique(patient_ids_task2)\n",
@@ -1697,23 +1710,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "d85ed60a",
    "metadata": {},
    "outputs": [],
    "source": [
     "#splitting the unique patient IDs into training and testing sets\n",
     "#Task 1 (isCancerous)\n",
-    "train_patients_task1, test_patients_task1 = train_test_split(unique_patients_task1, test_size=0.2, random_state=42)\n",
-    "train_patients_task1, val_patients_task1 = train_test_split(train_patients_task1, test_size=0.2, random_state=42)\n",
+    "#train_patients_task1, test_patients_task1 = train_test_split(unique_patients_task1, test_size=0.2, random_state=42)\n",
+    "#train_patients_task1, val_patients_task1 = train_test_split(train_patients_task1, test_size=0.2, random_state=42)\n",
     "#Task 2 (cellType)\n",
-    "train_patients_task2, test_patients_task2 = train_test_split(unique_patients_task2, test_size=0.2, random_state=42)\n",
-    "train_patients_task2, val_patients_task2 = train_test_split(train_patients_task2, test_size=0.2, random_state=42)"
+    "#train_patients_task2, test_patients_task2 = train_test_split(unique_patients_task2, test_size=0.2, random_state=42)\n",
+    "#train_patients_task2, val_patients_task2 = train_test_split(train_patients_task2, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
+   "id": "3858bfdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#getting unique patients with their labels\n",
+    "patient_labels_1 = labels_task1[['patientID', 'isCancerous']].drop_duplicates()\n",
+    "\n",
+    "#first split: 80% train, 20% temp (val + test)\n",
+    "train_patients_1, temp_patients_1 = train_test_split(\n",
+    "    patient_labels_1,\n",
+    "    test_size=0.2,\n",
+    "    stratify=patient_labels_1['isCancerous'],\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "#second split: 50/50 of temp => 10% val, 10% test\n",
+    "val_patients_1, test_patients_1 = train_test_split(\n",
+    "    temp_patients_1,\n",
+    "    test_size=0.5,\n",
+    "    stratify=temp_patients_1['isCancerous'],\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Convert to sets for lookup\n",
+    "train_patients_task1 = set(train_patients_1['patientID'])\n",
+    "val_patients_task1 = set(val_patients_1['patientID'])\n",
+    "test_patients_task1 = set(test_patients_1['patientID'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "efc78070",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#assigning a single label per patient by taking the dominant cellType\n",
+    "dominant_celltype_per_patient = labels_task2.groupby('patientID')['cellType'] \\\n",
+    "    .agg(lambda x: x.value_counts().idxmax()) \\\n",
+    "    .reset_index()\n",
+    "\n",
+    "#first split: 80% train, 20% temp (val + test)\n",
+    "train_patients_2, temp_patients_2 = train_test_split(\n",
+    "    dominant_celltype_per_patient,\n",
+    "    test_size=0.2,\n",
+    "    stratify=dominant_celltype_per_patient['cellType'],\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "#second split: 50/50 temp => 10% val, 10% test\n",
+    "val_patients_2, test_patients_2 = train_test_split(\n",
+    "    temp_patients_2,\n",
+    "    test_size=0.5,\n",
+    "    stratify=temp_patients_2['cellType'],\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Convert to sets for lookup\n",
+    "train_patients_task2 = set(train_patients_2['patientID'])\n",
+    "val_patients_task2 = set(val_patients_2['patientID'])\n",
+    "test_patients_task2 = set(test_patients_2['patientID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
    "id": "d5e7ccfb",
    "metadata": {},
    "outputs": [],
@@ -1726,7 +1805,7 @@
     "X_test_task1, y_test_task1 = [], []\n",
     "\n",
     "for i, img in enumerate(X_task1):\n",
-    "    patient_id = labels_task1.iloc[i]['ImageName'].split('_')[0]\n",
+    "    patient_id = labels_task1.iloc[i]['patientID']\n",
     "    if patient_id in train_patients_task1:\n",
     "        X_train_task1.append(img)\n",
     "        y_train_task1.append(y_isCancerous[i])\n",
@@ -1742,8 +1821,10 @@
     "X_val_task2, y_val_task2 = [], []\n",
     "X_test_task2, y_test_task2 = [], []\n",
     "\n",
+    "unmatched_patient_ids = set()\n",
+    "\n",
     "for i, img in enumerate(X_task2):\n",
-    "    patient_id = labels_task2.iloc[i]['ImageName'].split('_')[0]\n",
+    "    patient_id = labels_task2.iloc[i]['patientID']\n",
     "    if patient_id in train_patients_task2:\n",
     "        X_train_task2.append(img)\n",
     "        y_train_task2.append(y_cellType_encoded[i])\n",
@@ -1752,12 +1833,14 @@
     "        y_val_task2.append(y_cellType_encoded[i])\n",
     "    elif patient_id in test_patients_task2:\n",
     "        X_test_task2.append(img)\n",
-    "        y_test_task2.append(y_cellType_encoded[i])"
+    "        y_test_task2.append(y_cellType_encoded[i])\n",
+    "    else:\n",
+    "        unmatched_patient_ids.add(patient_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 162,
    "id": "947d675c",
    "metadata": {},
    "outputs": [],
@@ -1781,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 163,
    "id": "7d5ec9b1",
    "metadata": {},
    "outputs": [
@@ -1789,8 +1872,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task 1 - Train: (12979, 27, 27, 3), Val: (3245, 27, 27, 3), Test: (4056, 27, 27, 3)\n",
-      "Task 2 - Train: (6332, 27, 27, 3), Val: (1584, 27, 27, 3), Test: (1980, 27, 27, 3)\n"
+      "Task 1 - Train: (17660, 27, 27, 3), Val: (1006, 27, 27, 3), Test: (1614, 27, 27, 3)\n",
+      "Task 2 - Train: (8369, 27, 27, 3), Val: (833, 27, 27, 3), Test: (694, 27, 27, 3)\n"
      ]
     }
    ],
@@ -1807,7 +1890,10 @@
    "source": [
     "### *Prevention of Data Leakage*\n",
     "\n",
-    "- "
+    "- Splitting into training, validation, and testing sets for Task 1 and Task 2 (separately) were done on the patient-level, not the image level, to ensure all images per patient appear in the same dataset split. \n",
+    "- If images from the same patient appear in both training and evaluation sets, then this would cause data leakage of patient-specific information as the model then learns specific patient information instead of generealizable patterns. Model will only generalize based on patients, rather than actual useful predictors.\n",
+    "- Data leakage cause overestimatation of the classification model'ss performance and leads to poor generalization.\n",
+    "- The trade-off is that patient-level stratified splitting does not ensure an exact 80%/10%/10% split in training, validation, and testing set, but preventing data leakage is prioritized."
    ]
   },
   {
